--- a/client/src/Components/NavBar.css
+++ b/client/src/Components/NavBar.css
@@ -1,27 +1,128 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Pacifico&family=Recursive:wght@300&display=swap');
+
+body,*{
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 }
 
-nav a:active{
-	color: white;
+
+a{
+	margin: 2px;
 	text-decoration: none;
+	color: white;
 }
 
-nav a:hover{
-	color: white;
-	border-top: 2px #FFF solid;
-}
 
 .nav-wrapper{
 	display: flex;
+	font-family: 'Recursive', sans-serif;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	justify-content: space-between;
 	justify-content: flex-end;
-	background-color: black;
-	width: 100%;
-	height: 3rem;
-	font-size: 1.5rem;
+	background-color: transparent;
+	position: fixed;
+	z-index: 10;
+	width: 100vw;
+	height: 3.5rem;
+	font-size: 1rem;
+
+}
+
+.log{
+	background-color: #476b6b;
+	border-radius: 5px;
+	color: white;
+	height: 2rem;
+	padding: 2px;
+	margin-right: 5px;
+	margin-top: 12px;
+}
+
+.log:hover{
+	background-color: #618685;
+	color: white;
+	cursor: pointer;
+}
+.reg{
+	border: 1px #002966 solid;
+	border-radius: 5px;
+	background-color: #002966;
+	color: white;
+	height: 2rem;
+	padding: 2px;
+	margin-right: 15px;
+	margin-top: 12px;
+}
+
+.reg:hover{
+	background-color: #0047b3;
+	color: white;
+	cursor: pointer;
+}
+
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 29px;
+  margin-top: 12px;
+  margin-right: 10px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 24px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #000;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #000;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
