adding Features component

--- a/client/src/Pages/Login.css
+++ b/client/src/Pages/Login.css
@@ -9,7 +9,7 @@
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-image:url("../asset/img/Back1.jpg");
+    background-image:url("../../public/asset/img/Back1.jpg");
     background-repeat:no-repeat;
     background-size: cover;
 }
