--- a/client/src/Pages/Home.css
+++ b/client/src/Pages/Home.css
@@ -1,14 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Pacifico&family=Recursive:wght@300&display=swap');
+
 html{
 	overflow-x: hidden;
 	overflow-y: auto;
 }
+
 *{
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 	overflow: visible;
 }
+
+
 
 section{
 	font-family: 'Recursive', cursive;
@@ -31,14 +34,29 @@ section{
 	vertical-align: middle;
 }
 
+
 .heading{
-	position: relative;
-	top: 80px;
-	left: 10px;
+
+background-image: url(../asset/img/Back1.jpg);
+	top: 80%;
 	display: block;
 	font-size: 4vw;
-	margin-bottom: 100px;
+	margin-bottom: 1%;
 	color: black;
+}
+
+.fortitles{
+	padding-top: 10%;
+	text-align: center;
+}
+.forlinks
+{	
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin-left: 40%;
+	margin-right: 40%;
+	padding-bottom: 15%;
 
 }
 
