--- a/client/src/Components/NavBar.css
+++ b/client/src/Components/NavBar.css
@@ -1,71 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Pacifico&family=Recursive:wght@300&display=swap');
-
 body,*{
 	box-sizing: border-box;
-	padding: 0;
+	padding:0%;
 	margin: 0;
 }
-
-
 a{
 	margin: 2px;
 	text-decoration: none;
 	color: white;
 }
-
-
 .nav-wrapper{
 	display: flex;
-	font-family: 'Recursive', sans-serif;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	justify-content: flex-end;
+	justify-content:flex-end;
 	background-color: transparent;
-	position: fixed;
-	z-index: 10;
 	width: 100vw;
 	height: 3.5rem;
-	font-size: 1rem;
-
 }
-
-.log{
-	background-color: #476b6b;
-	border-radius: 5px;
-	color: white;
-	height: 2rem;
-	padding: 2px;
-	margin-right: 5px;
-	margin-top: 12px;
-}
-
-.log:hover{
-	background-color: #618685;
-	color: white;
-	cursor: pointer;
-}
-.reg{
-	border: 1px #002966 solid;
-	border-radius: 5px;
-	background-color: #002966;
-	color: white;
-	height: 2rem;
-	padding: 2px;
-	margin-right: 15px;
-	margin-top: 12px;
-}
-
-.reg:hover{
-	background-color: #0047b3;
-	color: white;
-	cursor: pointer;
-}
-
-
-/* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
+  padding-top: 0%;
   width: 50px;
   height: 29px;
   margin-top: 12px;
