--- a/client/src/Pages/Home.css
+++ b/client/src/Pages/Home.css
@@ -1,24 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Pacifico&family=Recursive:wght@300&display=swap');
-html{
+html {
 	overflow-x: hidden;
 	overflow-y: auto;
 }
-*{
+
+* {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 	overflow: visible;
 }
 
-section{
+
+
+section {
 	font-family: 'Recursive', cursive;
 	width: 100%;
-	height:100%;
+	height: 100%;
 	background-color: white;
 	background-repeat: no-repeat;
 }
 
-.wrap{
+.wrap {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -26,23 +28,39 @@ section{
 	vertical-align: bottom;
 }
 
-.welcome{
+.welcome {
 	text-align: center;
 	vertical-align: middle;
 }
 
-.heading{
-	position: relative;
-	top: 80px;
-	left: 10px;
+
+.heading {
+
+	background-image: url(../asset/img/illustration-g4d721afda_1920.jpg);
+	top: 80%;
 	display: block;
 	font-size: 4vw;
-	margin-bottom: 100px;
+	margin-bottom: 1%;
 	color: black;
+}
+
+.fortitles {
+	padding-top: 10%;
+	text-align: center;
+}
+
+.forlinks {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin-top: 3%;
+	margin-left: 40%;
+	margin-right: 40%;
+	padding-bottom: 15%;
 
 }
 
-.body{
+.body {
 	width: 100%;
 	height: 100vh;
 	font-size: 4vw;
@@ -52,27 +70,47 @@ section{
 }
 
 @keyframes heading {
-  0%   {margin-left: -100px;}
-  25%  {margin-left: 10px;}
-  50%  {margin-left: 50px;}
-  75%  {margin-left: 100px;}
-  100% {margin-left: 200px;}
+	0% {
+		margin-left: -100px;
+	}
+
+	25% {
+		margin-left: 10px;
+	}
+
+	50% {
+		margin-left: 50px;
+	}
+
+	75% {
+		margin-left: 100px;
+	}
+
+	100% {
+		margin-left: 200px;
+	}
 }
 
 /* width */
 ::-webkit-scrollbar {
-  width: .50rem;
+	width: .50rem;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+	box-shadow: inset 0 0 5px grey;
+	border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: gray;
-  border-radius: 10px;
+	background: gray;
+	border-radius: 10px;
 }
 
+#flip>img {
+	background-size: cover;
+	background-repeat: no-repeat;
+	width: 100vw;
+	height: 100vh;
+}
