--- a/client/src/Components/active-chat-users/active-chat-user.css
+++ b/client/src/Components/active-chat-users/active-chat-user.css
@@ -3,7 +3,12 @@
     flex-direction: row;
 
 }
-
+.chat-class{
+    width:100%;
+    height: 100%;
+    padding: 5%;
+    margin:0%;
+}
 .messages:hover {
     background-color: cornflowerblue;
 }
@@ -24,4 +29,10 @@
     border-radius: 50%;
     border: 3px solid rgba(21, 30, 63, 255);
 
+}
+@media screen and (max-width:750px) {
+    .chat-view{
+        visibility: hidden;
+    }
+    
 }
