--- a/client/src/Components/sidebar/sidebar.css
+++ b/client/src/Components/sidebar/sidebar.css
@@ -1,14 +1,14 @@
 .links
 {    
     height: 100%;
-    width: 16%;
+    width: 13%;
     position: fixed;
     z-index: 1;
     top: 0;
-    left: 0;
+    left:0; 
     background-color:rgba(21,30,63,255);
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 2%;
 }
 .logo {
     font-size: 200%;
@@ -25,8 +25,45 @@
     color: #818181;
     display: block;
 }
-@media screen and (max-height: 450px) {
+/* @media screen and (max-height: 450px) {
     .links {padding-top: 15px;}
     .links div {font-size: 18px;}
-  }
+  } */
   
+  #hamburger-menu {
+    position: fixed;
+    top: 2%;
+    left: 2%;
+    width: 5%;
+    height: 5%;
+    display: none;
+    border: none;
+    font-family: 'Cabin', Sans-serif;
+    background: linear-gradient(
+      to bottom, 
+black, black 20%, 
+      white 20%, white 40%, 
+      black 40%,black 60%, 
+      white 60%, white 80%, 
+      black 80%,black 100%
+    );}
+    #hamburger-menu #sidebar-menu {
+        visibility: hidden;
+        position: fixed;
+        top: 0;
+        left: -250px;
+        width: 200px;
+        height: 100%;
+        background-color: #3D0E61;
+        transition: 0.3s;
+        padding: 0px 10px;
+        box-sizing: border-box;
+    }
+    @media screen and (max-width: 750px) {
+        .links {
+          display: none;
+        }
+        #hamburger-menu {
+          display: inline;
+        }
+      }
