--- a/client/src/Pages/Chat.css
+++ b/client/src/Pages/Chat.css
@@ -23,15 +23,10 @@
 .chat-second-items
 {
     margin-left: 10%;
-    padding-left: 1%;
-    padding-top: 1%;
-    padding-right: 1%;
-    margin:4px, 4px;
-    padding:4px;
+    padding-left: 1% 1% 1% 1%;
     width: 25%;
-    height: 90%;
-    overflow-x: hidden;
-    overflow-y: auto;
+    height: 100%;
+
 }
 .chat-view
 {
@@ -40,10 +35,17 @@
     background-color: white;
     float: right;
     background-color: white;
-    overflow-x: hidden;
-    overflow-y: auto;
+
 }
 .writing-chat{
     margin-top: 70%;
     margin-left: 25%;
+}
+@media screen and (max-width:750px) {
+    .chat-view{
+        visibility: hidden;
+    }
+    /* .chat-second-items{
+        
+    } */
 }
