--- a/client/src/Pages/Event/Event.css
+++ b/client/src/Pages/Event/Event.css
@@ -1,62 +1,70 @@
-.Event-class
-{
-    background-color: rgb(1, 1, 100);
-    padding-bottom: 10%;
+.Event-class {
+    margin: 3%;
+    padding: 0 3em 0 20em;
+    background-color: whitesmoke;
+    text-transform: capitalize;
+    font-size: 1rem;
+
 }
 
-.event-card
-{
-      width: 70%;
-    height: 90%; 
-    margin-top: 4%; 
-    display:grid;
-    grid-template-columns:  auto ;
-    padding-left: 30%;
-    gap: 3%;
-    border-radius: 30px;
+.event-title {
+    margin: 1em 0em;
 }
-.event-element{
-    width:100%;
-    height: 100%;
+
+.event-card {
+    width: 100%;
+    /* height: 100%; */
+
+    display: grid;
+    grid-template-columns: auto;
+
+
 }
-.event-pic{
-    width:100%;
+
+.event-element {
+    width: 100%;
+    /* height: 90%; */
+    /* border: 0.05rem solid black; */
+
+}
+
+.event-pic {
+    width: 100%;
     height: 50%;
 }
-.event-inv{
-    width:100%;
-    height:100%;
+
+.event-inv {
+    width: 100%;
+    height: 100%;
 }
-.event-location{
+
+.event-location {
     display: flex;
     flex-direction: row;
 }
-.location-img
-{
-    width:1rem;
-    height:1rem;
+
+.location-img {
+    width: 1rem;
+    height: 1rem;
 }
-.event-data{
+
+.event-data {
     display: flex;
     flex-direction: row;
     padding: 1%;
 }
-.calander-img
-{
-    width:1rem;
-    height:1rem;
+
+.calander-img {
+    width: 1rem;
+    height: 1rem;
 }
-.event-book{
+
+.event-book {
     display: flex;
     flex-direction: row;
 }
-.book-img
-{
-    width:1rem;
-    height:1rem;
-}
-@media screen and(max-width:800px) {
-    .event-card{
-        grid-template-columns: auto;
-    }
+
+.book-img {
+    width: 1rem;
+    height: 1rem;
 }
