--- a/client/src/Pages/Home.css
+++ b/client/src/Pages/Home.css
@@ -65,7 +65,7 @@ section {
 	height: 100vh;
 	font-size: 4vw;
 	text-align: center;
-	color: rgba(0, 118, 244, 0.7);
+	/* color: rgba(0, 118, 244, 0.7); */
 	padding-top: 200px;
 }
 
