--- a/client/src/Pages/post/post.css
+++ b/client/src/Pages/post/post.css
@@ -1,36 +1,41 @@
 .post {
-    background-color: rgb(1, 1, 100);
-    }
-.post-per{
- 
-display: grid;
-  grid-template-columns: auto;
-  gap: 0%;
-  margin-left:23%;
-  padding: 10%;
+    background-color: whitesmoke;
+}
+
+.post hr {
+    margin: 1rem;
+}
+
+.post-per {
+    width: 50%;
+    display: grid;
+    grid-template-columns: auto;
+    gap: 0%;
+    margin: 2%;
+    margin-left: 25%;
+    padding: 0%;
 }
 
 .posters-elements {
     display: flex;
     flex-direction: column;
-    float: left;
-    font-size: 90%;
-    width: 50%;
-    height: 50%;
-    color: aqua;
+    /* float: left; */
+    font-size: 1rem;
+    text-transform: capitalize;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* width: 100%;
+    height: 100%; */
+    color: rgba(21, 30, 63, 255);
     margin: 0% 0% 5% 0%;
     padding: 1% 2% 2% 2%;
-    background-color: rgb(21, 30, 63);
-    width: 20rem;
-    height: 20rem;
+    background-color: white;
     border: 3px solid rgba(21, 30, 63, 0);
-    box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
+    box-shadow: 0.3rem 0.3rem rgba(121, 121, 121, 0.65);
     border: none;
     border-radius: 30px;
 }
 
 .post-info {
-
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -38,8 +43,8 @@ display: grid;
 }
 
 .post-user-profile {
-    width: 3rem;
-    height: 3rem;
+    width: 4rem;
+    height: 4rem;
     border-radius: 50%;
     border: 3px solid rgba(21, 30, 63, 255);
     object-fit: cover;
@@ -47,9 +52,11 @@ display: grid;
 }
 
 .post-pic {
-    width:18rem;
+
+    width: 100%;
     height: 20rem;
-    padding: 1% 1% 1% 1%;
+    padding: 1%;
+    margin-top: 1rem;
 }
 
 .l-post {
@@ -59,16 +66,27 @@ display: grid;
 }
 
 .like-post {
-    width:24px;
-    height: 24px;
+    width: 40px;
+    height: 40px;
 }
 
 .love-post {
-    width: 24px;
-    height: 24px;
+    width: 40px;
+    height: 40px;
 }
- @media screen and (max-width: 800px) {
-.post-per{
-margin-left: 0%;
+
+.li-co-sh {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
-} 
+
+.postLikeCounter {
+    text-align: center;
+}
+
+@media screen and (max-width: 800px) {
+    .post-per {
+        margin-left: 0%;
+    }
+}
