--- a/client/src/Components/PictureCard.css
+++ b/client/src/Components/PictureCard.css
@@ -1,9 +1,53 @@
-.container{
+/* .container {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+} */
+
+
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	overflow: visible;
+
 }
 
+.img2 {
+	display: flex;
+	flex-direction: row;
+	width: 100vw;
+	height: 100vh;
+	background-color: white;
+	padding: 6rem 2.6rem 6rem 2.6rem;
+}
+
+.img1 {
+	display: flex;
+	flex-direction: row;
+	width: 100vw;
+	height: 100vh;
+	background-color: white;
+	padding: 6rem 2.6rem 6rem 2.6rem;
+	margin-bottom: 10%;
+}
+
+.img3 {
+	display: flex;
+	flex-direction: row-reverse;
+	width: 100vw;
+	height: 100vh;
+	background-color: whitesmoke;
+	padding: 6rem 2.6rem 6rem 2.6rem;
+	margin-top: 10%;
+}
+
+.card-img img {
+	width: 50vw;
+	height: 100vh;
+	background-size: cover;
+	align-items: flex-start;
+}
 .card{
 	width: 320%;
 	height: 50vh;
@@ -22,15 +66,24 @@
 	padding-bottom: 25%;
 }
 
-.card:hover{
-	cursor: pointer;
-	transform: scale(1.05);
+.card-text {
+
+	width: 50vw;
+	height: 50vh;
+
 }
 
-img{
-	width: 100%;
-	height: 100%;
+.card-text p {
+	font-size: 1.4rem;
+	font-family: Georgia, 'Times New Roman', Times, serif;
+	margin: 0 2.5rem 0 2.5rem;
+	text-align: left;
+	color: black;
+	text-transform: none;
 }
-div h2{
-	padding: 10px;
+
+.card-text h1 {
+	font-family: 'Tapestry', cursive;
+	font-size: 3rem;
+	color: gray;
 }
