--- a/client/src/Components/links/link.style.css
+++ b/client/src/Components/links/link.style.css
@@ -1,27 +1,38 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Pacifico&family=Recursive:wght@300&display=swap');
+
 
 .nav-css{
 	display: flex;
 	font-family: 'Recursive', sans-serif;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	justify-content:center;
+	justify-content: center;
 	background-color: transparent;
 	z-index: 10;
 	width: 100vw;
 	height: 3.5rem;
 	font-size: 1rem;
-
 }
 
-.log{
-	background-color: #476b6b;
-	border-radius: 5px;
+.log {
+	background-color: #6666ff;
+	border-radius: 2vw;
 	color: white;
-	height: 2rem;
-	padding: 5px;
-
+	height: 3.5vw;
+	width: 10vw;
+	font-size: 2.2vw;
+	text-align: center;
+	padding: 0.3em 0.3em 0.3em 0.3em;
+	margin: 0.3em 0.3em 0.3em 0.3em;
 }
+
+.log:hover {
+	background-color: #8c8cfc;
+	color: white;
+	cursor: pointer;
+}
+
 
 .log:hover{
 	background-color: #618685;
