--- a/client/src/Pages/post/post.css
+++ b/client/src/Pages/post/post.css
@@ -7,13 +7,11 @@
 }
 
 .post-per {
-    width: 50%;
+    width: 80%;
+    height: 100%;
     display: grid;
     grid-template-columns: auto;
-    gap: 0%;
-    margin: 2%;
-    margin-left: 25%;
-    padding: 0%;
+ 
 }
 
 .posters-elements {
@@ -26,7 +24,7 @@
     /* width: 100%;
     height: 100%; */
     color: rgba(21, 30, 63, 255);
-    margin: 0% 0% 5% 0%;
+    margin: 0% 0% 5% 35%;
     padding: 1% 2% 2% 2%;
     background-color: white;
     border: 3px solid rgba(21, 30, 63, 0);
@@ -84,7 +82,20 @@
 .postLikeCounter {
     text-align: center;
 }
-
+.comment-section{
+    visibility: hidden;
+}
+.comment-change{
+    visibility: visible;
+}
+.plus{
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50% ;
+    position:fixed;
+    top:3%;
+    left:20%;
+}
 @media screen and (max-width: 800px) {
     .post-per {
         margin-left: 0%;
