--- a/client/src/Components/header/chat-header.css
+++ b/client/src/Components/header/chat-header.css
@@ -1,21 +1,17 @@
 .header-list
-{
+{ 
+    height:100%;
     display: flex;
-    flex-direction:row;
-
+    flex-direction:column;
     font-size:medium;
     font-weight: bold;
-    color: whitesmoke;
+    color: black;
 }
-.home{
-    margin: 1% 5% 1% 1%;
+.feeds-icon{
+    display: flex;
+    flex-direction: column;
 }
-.event{
-    margin: 1% 5% 1% 1%;
-}
-.blog{
-    margin: 1% 5% 1% 1%;
-}
-.notification{
-    margin: 1% 5% 1% 1%;
+.feed-img{
+    width:3rem;
+    height:3rem;
 }
