feed page edited

--- a/client/src/Pages/Home.css
+++ b/client/src/Pages/Home.css
@@ -43,7 +43,7 @@ section{
 .heading {
 
 	background-color: #ffffff;
-	background-image: url(../Asset/img/woman_dark.svg);
+	background-image: url(../Asset/img/illustration-g4d721afda_1920.jpg);
 
 	top: 80%;
 	display: block;
