--- a/client/src/Pages/post/feed-post.css
+++ b/client/src/Pages/post/feed-post.css
@@ -1,11 +1,11 @@
-.feed-class{
-    height: 100vh;
-    background-color: rgb(1, 1, 100);
-    background-size: cover;
-    background-repeat:no-repeat;
 
-}
 .feed-input{
-    position: absolute;
-    margin:20% 0% 0% 40%;
+    margin:1% 0% 0% 30%;
+  
+}
+.feed-input h1{
+    padding: 3%;
+}
+.art-disc{
+    resize: none;
 }
