--- a/client/src/Pages/post/post.css
+++ b/client/src/Pages/post/post.css
@@ -11,7 +11,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: auto;
- 
+
 }
 
 .posters-elements {
@@ -75,45 +75,51 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+
 }
 
 .postLikeCounter {
     text-align: center;
 }
-.comment-section{
+
+.comment-section {
     visibility: hidden;
     width: 0%;
     height: 0%;
 }
-.comment-change{
+
+.comment-change {
     visibility: visible;
-    margin-left:35%;
+    margin-left: 35%;
     margin-bottom: 1%;
 }
-.comment-text
-{
-    width:0vw;
+
+.comment-text {
+    width: 0vw;
     height: 0vh;
-    resize:none;
+    resize: none;
 }
-.comment-text-change
-{
-    width:40vw;
+
+.comment-text-change {
+    width: 40vw;
     height: 5vh;
-    resize:none;
+    resize: none;
 }
-.add-com{
+
+.add-com {
     position: fixed;
     left: 75%;
     bottom: 0%;
 }
-.btn-cmt{
+
+.btn-cmt {
     font-size: 1rem;
     padding: 1%;
     margin: 1%;
     margin-top: 0%;
     background-color: azure;
 }
+
 @media screen and (max-width: 800px) {
     .post-per {
         margin-left: 0%;
