--- a/client/src/Components/ChatMessage/ChatMessages.css
+++ b/client/src/Components/ChatMessage/ChatMessages.css
@@ -1,4 +1,4 @@
-main {
+/*main {
 	width: 75%;
 	height: 100% !important;
 	display: flex;
@@ -6,10 +6,18 @@ main {
 	vertical-align: top;
 }
 
+.chat-header {
+	display: flex;
+	flex-direction: row;
+}
+
+.chat-header div {
+	font-size: 3rem;
+	align-content: center;
+}
+
 main header {
 	height: 110px;
-	background-color: #151e3e;
-
 	padding: 30px 20px 30px 40px;
 }
 
@@ -34,7 +42,6 @@ main header div {
 
 main header h2 {
 	font-size: 16px;
-	color: #fff;
 	margin-bottom: 5px;
 }
 
@@ -144,7 +151,7 @@ main footer a {
 	font-weight: bold;
 	color: #6fbced;
 	vertical-align: top;
-	margin-left: 75%;
+	margin-left: 333px;
 	margin-top: 5px;
 	display: inline-block;
 }
@@ -152,3 +159,15 @@ main footer a {
 main footer textarea {
 	background-color: #3b3e49;
 }
+
+@media only screen and (max-width:800px) {
+	main {
+		width: 100%;
+	}
+
+	.me {
+		height: max-content;
+		width: max-content;
+	}
+
+}*/
