--- a/client/src/Pages/blog/blog.css
+++ b/client/src/Pages/blog/blog.css
@@ -1,46 +1,73 @@
-.Blog-class
-{
-    background-color: rgb(1, 1, 100);
+.Blog-class {
+    background-color: whitesmoke;
     padding-bottom: 10%;
 }
-.blog-card{
+
+.blog-card {
     width: 70%;
-    height: 70%;
-    display:grid;
-    grid-template-columns: auto  ;
-    gap: 2%;
-    margin: 1% 0% 1% 15%;
-    border-radius: 30px;
-}
-.blog-element{
-    width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    margin: 1% 0% 0% 15%;
+    border-radius: 30px;
+}
+
+.blog-element {
+    width: 100%;
+    height: 100%;
+    margin-top: 3%;
+    /* display: flex;
+    flex-direction: row; */
     background-color: white;
     border-radius: 30px;
 }
 
-.blog-img
-{
-    width: 100%;
-    height:100%;
-    padding: 1% 1% 1% 1%;
+.blog-reaction {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 3% 3%;
 }
-.blog-pic
-{
+
+.blog-av {
+    padding: 1%;
+}
+
+.blog-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.blog-date {
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 2%;
+}
+
+.blog-img {
     width: 100%;
     height: 100%;
     padding: 1% 1% 1% 1%;
 }
-.blog-cont{
+
+.blog-pic {
     width: 100%;
     height: 100%;
     padding: 1% 1% 1% 1%;
 }
+
+.blog-cont {
+    width: 100%;
+    height: 100%;
+    padding: 1% 1% 1% 1%;
+    text-align: justify;
+}
+
 @media screen and (max-width: 800px) {
-    .blog-element{
+    .blog-content {
         flex-direction: column;
     }
-  }
-
+}
